--- a/.github/workflows/ubuntu-image.yml
+++ b/.github/workflows/ubuntu-image.yml
@@ -1,22 +1,44 @@
-name: ubuntu
+name: Multiarch build
 
 on:
   push:
-    branches: ["master"]
-    paths-ignore:
-      - "README.md"
-      - "dev/**"
+    branches:
+    - main
   pull_request:
-    branches: ["master"]
-    paths-ignore:
-      - "README.md"
-      - "dev/**"
+    branches:
+    - main
+
+  workflow_dispatch:
+
+env:
+  IMAGE_NAME: samba-ad
+  IMAGE_TAG: v0.1.0
+  DH_REGISTRY: docker.io
+  DH_NAMESPACE: tli551
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    name: Build and push multi-arch image
+    runs-on: ubuntu-20.04
+    
     steps:
       - uses: actions/checkout@v3
-      - name: Build the Docker image
-        run: docker build . --file dockerfiles/ubuntu --tag samba-ubuntu
+        
+      - name: set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.DH_REGISTRY }}
+          username: ${{ secrets.DH_USER }}
+          password: ${{ secrets.DH_KEY }}
+
+      - name: build and push images
+        run: |
+          docker buildx build --push \
+            --tag ${{ env.DH_REGISTRY }}/${{env.DH_NAMESPACE }}/${{env.IMAGE_NAME}}:${{env.IMAGE_TAG}} \
+            --platform linux/amd64,linux/arm64 .
