Added publish readme to docker hub
Signed-off-by: Tong Li <tli@netapp.com>

--- a/.github/workflows/ubuntu-image.yml
+++ b/.github/workflows/ubuntu-image.yml
@@ -48,4 +48,4 @@ jobs:
         with:
           username: ${{ secrets.DH_USER }}
           password: ${{ secrets.DH_KEY }}
-          repository: ${{ env.DH_REGISTRY }}
+          repository: ${{ env.DH_REGISTRY }}/${{env.DH_NAMESPACE }}/${{env.IMAGE_NAME}}
